# blatann

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
blatann/: __init__.py  advertising.py  device.py  event_args.py  event_handler.py  event_type.py  exceptions.py  gatt.py  gattc.py  gatts.py  peer.py  peripheral.py  peripheral_manager.py  scanning.py  service_discovery.py  uuid.py  uuids.py
blatann/bt_sig/: assigned_numbers.py  uuids.py
blatann/examples/: __main__.py  broadcaster.py  centeral_uart_service.py  central.py  central_async.py  central_battery_service.py  central_descriptors.py  central_device_info_service.py  central_event_driven.py  central_uart_service.py  constants.py  example_utils.py  glucose_peripheral.py  peripheral.py  peripheral_async.py  peripheral_battery_service.py  peripheral_current_time_service.py  peripheral_descriptors.py  peripheral_device_info_service.py  peripheral_glucose_service.py  peripheral_rssi.py  peripheral_uart_service.py  scanner.py  scanner_async.py
blatann/gap/: __init__.py  advertise_data.py  advertising.py  bond_db.py  default_bond_db.py  gap_types.py  generic_access_service.py  scanning.py  smp.py  smp_crypto.py  smp_types.py
blatann/gatt/: __init__.py  gattc.py  gattc_attribute.py  gatts.py  gatts_attribute.py  managers.py  reader.py  service_discovery.py  writer.py
blatann/nrf/: gattc.py  nrf_adapter.py  nrf_dll_load.py  nrf_driver.py  nrf_driver_types.py  nrf_event.py  nrf_event_sync.py  nrf_observers.py  nrf_types.py
blatann/nrf/nrf_events/: __init__.py  gap_events.py  gatt_events.py  generic_events.py  smp_events.py
blatann/nrf/nrf_types/: __init__.py  config.py  enums.py  gap.py  gatt.py  generic.py  smp.py
blatann/services/: __init__.py  ble_data_types.py  decoded_event_dispatcher.py  serializers.py
blatann/services/battery/: __init__.py  constants.py  data_types.py  service.py
blatann/services/current_time/: __init__.py  constants.py  data_types.py  service.py
blatann/services/device_info/: __init__.py  constants.py  data_types.py  serializers.py  service.py
blatann/services/glucose/: __init__.py  constants.py  data_types.py  database.py  racp.py  service.py
blatann/services/nordic_uart/: __init__.py  constants.py  service.py
blatann/utils/: __init__.py  _threading.py  queued_tasks_manager.py
blatann/waitables/: __init__.py  connected_waitable.py  connection_waitable.py  event_queue.py  event_waitable.py  scan_waitable.py  waitable.py
docs/: Makefile  requirements.txt
docs/source/: api_reference.rst  architecture.rst  blatann.bt_sig.assigned_numbers.rst  blatann.bt_sig.rst  blatann.bt_sig.uuids.rst  blatann.device.rst  blatann.event_args.rst  blatann.event_type.rst  blatann.examples.broadcaster.rst  blatann.examples.centeral_uart_service.rst  blatann.examples.central.rst  blatann.examples.central_async.rst  blatann.examples.central_battery_service.rst  blatann.examples.central_descriptors.rst  blatann.examples.central_device_info_service.rst  blatann.examples.central_event_driven.rst  blatann.examples.central_uart_service.rst  blatann.examples.constants.rst  blatann.examples.example_utils.rst  blatann.examples.glucose_peripheral.rst  blatann.examples.multirole.rst  blatann.examples.peripheral.rst  blatann.examples.peripheral_async.rst  blatann.examples.peripheral_battery_service.rst  blatann.examples.peripheral_current_time_service.rst  blatann.examples.peripheral_descriptors.rst  blatann.examples.peripheral_device_info_service.rst  blatann.examples.peripheral_glucose_service.rst  blatann.examples.peripheral_rssi.rst  blatann.examples.peripheral_uart_service.rst  blatann.examples.rst  blatann.examples.scanner.rst  blatann.examples.scanner_async.rst  blatann.exceptions.rst  blatann.gap.advertise_data.rst  blatann.gap.advertising.rst  blatann.gap.bond_db.rst  blatann.gap.default_bond_db.rst  blatann.gap.gap_types.rst  blatann.gap.generic_access_service.rst  (+76 more)
examples/: peripheral.py
tests/integrated/: .gitignore  base.py  helpers.py  test_advertising.py  test_advertising_data.py  test_advertising_duration.py  test_gap.py  test_gatt.py  test_gatt_writes.py  test_scanner.py  test_security.py
tools/: macos_retarget_pc_ble_driver_py.sh
