[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "blatann"
requires-python = ">=3.7"
authors = [
    {name = "Thomas Gerstenberg", email = "tgerst6@gmail.com"}
]
description = "Python BLE library for using Nordic nRF52 with Connectivity firmware"
keywords = ["ble", "bluetooth", "nrf52", "nordic"]
readme = "README.md"
license = {text = "BSD 3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

dynamic = ["version", "dependencies"]

[project.optional-dependencies]
dev = [
    "build",
    "ruff",
    "isort",
]

[project.urls]
Documentation = "https://blatann.readthedocs.io/en/latest/"
Repository = "https://github.com/ThomasGerstenberg/blatann"
Changelog = "https://blatann.readthedocs.io/en/latest/changelog.html"

[tool.setuptools.dynamic]
version = {attr = "blatann.__version__"}
dependencies = {file = "requirements.txt"}

[tool.ruff]
line-length = 120
target-version = "py37"

[tool.ruff.lint]
# TODO: Remove these and fix instances once others are cleaned up
ignore = ["F401", "F403", "F405"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.isort]
py_version = 37
src_paths = ["blatann", "tests"]

sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER', 'TEST']
known_test = ['tests']

line_length = 120
multi_line_output = 5  # Hanging Grid Grouped
use_parentheses = true
